# MisogiAssignments

./: .gitignore  README.md
Assignment3/q1/: README.md  domain_analysis.md  hallucination_log.md  requirements.txt  test_ollama.py
Assignment3/q1/evaluation/: analysis_report.md  input_queries.json  output_logs.json
Assignment3/q1/prompts/: cot_prompt.txt  few_shot.txt  meta_prompt.txt  zero_shot.txt
Assignment3/q1/src/: main.py  notebook.ipynb  utils.py
Assignment3/q2/: COMPLETION_SUMMARY.md  README.md  demo.py  requirements.txt
Assignment3/q2/evaluation/: metrics_report.md  reflection_analysis.md
Assignment3/q2/prompts/: base_prompts.json  optimization_prompts.json  tot_prompts.json
Assignment3/q2/src/: evaluator.py  main.py  prompt_optimizer.py  self_consistency.py  tot_reasoning.py  utils.py
Assignment3/q2/tasks/: code_debugging.json  logic_puzzles.json  math_problems.json  task_definitions.md
Day4/mcp-qa-bot/: README.md  package-lock.json  package.json
Interview/: rag.py  test.py  test_rag.py
practice/Clothing_agent.py/: clothing_agent.py
practice/Q1/: dummy_data.txt  rag.py
practice/RAG/: README.md  env_template.txt  rag_implementation.py  requirements.txt  test_rag.py
week4/Day2/Q1/: README.md  doc_data.json
week4/Day3/Q1/: README.md  main.py  pyproject.toml
week4/Day3/Q2/: requirements.txt
week4/Day3/Q3/: README.md
week4/Day4/: main.py  requirements.txt
week5/Day4/: .gitignore  main.py  pyproject.toml
week5/Day4/chroma_langchain_db/: chroma.sqlite3
week5/Day4/routes/: __init__.py  fitz_vs_langchain.py  ingest.py
(+98 files in other folders)
