[project]
name = "day4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "uvicorn[standard]>=0.35.0",
    "langchain-docling>=0.1.0",
    "pymupdf>=1.26.3",
    "tabulate>=0.9.0",
    "langchain-unstructured>=0.1.6",
    "unstructured-client>=0.41.0",
    "unstructured[pdf]>=0.18.11",
    "python-magic>=0.4.27",
    "langchain-openai>=0.3.28",
    "langchain-core>=0.3.72",
]

[tool.uv]
constraint-dependencies = [
    "tokenizers>=0.20.0,<0.21",  # Use version that has Windows support
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
langchain = "*"
chromadb = "*"
sentence-transformers = "*"
camelot-py = {extras = ["cv"], version = "*"}
pandas = "*"
